# MethodsOfComputation

./: CMakeLists.txt  FifthMain.cpp  FourthMain.cpp  InterpolationTools.h  Poly.cpp  Poly.h  SecondMain.cpp  ThirdMain.cpp
